--- a/proyecto-coder-main/AppCoder/templates/AppCoder/padre.html
+++ b/proyecto-coder-main/AppCoder/templates/AppCoder/padre.html
@@ -25,9 +25,16 @@
                 <a class="navbar-brand" href="{% url 'VerProfes' %}">Profesores</a>
                 <a class="navbar-brand" href="{% url 'VerEstudiantes' %}">Estudiantes</a>
                 <a class="navbar-brand" href="{% url 'VerEntregas' %}">Entregables</a>
-                <a class="btn btn-primary" href="{% url 'Register' %}">Registrarse</a>
-                <a class="btn btn-primary" href="{% url 'Login' %}">Login</a>
+                {% if request.user.is_authenticated %}
                 <a class="btn btn-primary" href="{% url 'Logout' %}">Logout</a>
+                <a class="btn btn-warning" href="{% url 'EditarPerfil' %}">Editar Perfil</a>
+                {% comment %} <img src=”{{(Avatar.ojects.filter(user=request.user.id))[0].imagen.url}}” />
+                <p class=”text-muted small mb-4 mb-lg-0”> Hola, {{user.username}}!!!.</p> {% endcomment %}
+                
+                {% else %}
+                    <a class="btn btn-primary" href="{% url 'Login' %}">Login</a>
+                    <a class="btn btn-primary" href="{% url 'Register' %}">Registrarse</a>
+                {% endif %}
             </div>
         </nav>
         <!-- Masthead-->
