--- a/proyecto-coder-main/AppCoder/templates/AppCoder/padre.html
+++ b/proyecto-coder-main/AppCoder/templates/AppCoder/padre.html
@@ -26,10 +26,16 @@
                 <a class="navbar-brand" href="{% url 'VerEstudiantes' %}">Estudiantes</a>
                 <a class="navbar-brand" href="{% url 'VerEntregas' %}">Entregables</a>
                 {% if request.user.is_authenticated %}
-                <a class="btn btn-primary" href="{% url 'Logout' %}">Logout</a>
-                <a class="btn btn-warning" href="{% url 'EditarPerfil' %}">Editar Perfil</a>
-                {% comment %} <img src=”{{(Avatar.ojects.filter(user=request.user.id))[0].imagen.url}}” />
-                <p class=”text-muted small mb-4 mb-lg-0”> Hola, {{user.username}}!!!.</p> {% endcomment %}
+                    <a class="btn btn-primary" href="{% url 'Logout' %}">Logout</a>
+                    <a class="btn btn-warning" href="{% url 'EditarPerfil' %}">Editar Perfil</a>
+                    {% if request.user.avatar_set.exists %}
+                        <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img  src="{{ request.user.avatar_set.first.imagen.url }}" alt="Avatar de {{ request.user.username }}" class="rounded-circle" width="50"></a>
+                        <a class="btn btn-danger" href="{% url 'AgregarAvatar' %}">Cambiar Avatar</a>
+                    {% else %}
+                        <a class="nav-link dropdown-toggle text-muted waves-effect waves-dark pro-pic" href="" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img src="{% static 'no-avatar.png' %}" alt="user" class="rounded-circle" width="31"></a>
+                        <a class="btn btn-danger" href="{% url 'AgregarAvatar' %}">Cambiar Avatar</a>
+                    {% endif %}
+                    <p class=”text-muted small mb-4 mb-lg-0”> Hola, {{user.username}}!!!.</p> 
                 
                 {% else %}
                     <a class="btn btn-primary" href="{% url 'Login' %}">Login</a>
